# audiodecoder.dumb

./: .gitignore  .travis.yml  CMakeLists.txt  FindDumb.cmake  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  ccpp.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.dumb/: addon.xml  addon.xml.in
audiodecoder.dumb/resources/language/resource.language.ca_es/: strings.po
audiodecoder.dumb/resources/language/resource.language.da_dk/: strings.po
audiodecoder.dumb/resources/language/resource.language.de_de/: strings.po
audiodecoder.dumb/resources/language/resource.language.en_gb/: strings.po
audiodecoder.dumb/resources/language/resource.language.es_es/: strings.po
audiodecoder.dumb/resources/language/resource.language.es_mx/: strings.po
audiodecoder.dumb/resources/language/resource.language.eu_es/: strings.po
audiodecoder.dumb/resources/language/resource.language.fr_fr/: strings.po
audiodecoder.dumb/resources/language/resource.language.hr_hr/: strings.po
audiodecoder.dumb/resources/language/resource.language.id_id/: strings.po
audiodecoder.dumb/resources/language/resource.language.it_it/: strings.po
audiodecoder.dumb/resources/language/resource.language.ko_kr/: strings.po
audiodecoder.dumb/resources/language/resource.language.nl_nl/: strings.po
audiodecoder.dumb/resources/language/resource.language.pl_pl/: strings.po
debian/: changelog.in  control  copyright  rules
lib/: kodi-dumb-note.txt
lib/dumb/cmake/: CMakeLists.txt
lib/dumb/src/it/: itrender.c
src/: DumbCodec.cpp  DumbCodec.h
(+6 files in other folders)
